# ansi-escape-demo

./: .gitignore  CMakeLists.txt  Catnip.cmake  README.md
include/: platform.h
include/platform/3ds/: platform_defs.h
include/platform/gamecube/: platform_defs.h
include/platform/nds/: platform_defs.h
include/platform/switch/: platform_defs.h
include/platform/wii/: platform_defs.h
source/: main.c
source/3ds/: platform.c
source/nds/: platform.c
source/ogc/: platform.c
source/switch/: platform.c
